--- a/src/cards.css
+++ b/src/cards.css
@@ -9,14 +9,18 @@ html {
 .icon {color: #BCD2DA;}
 
 .card {
-    /* display, flex-direction */
+    display: flex;
+    flex-direction: column;
     border: 1px solid #CAD0D2;
     border-radius: 4px;
     overflow: hidden;
 }
 
 .card__description {
-    /* display, flex-direction, justify-content, align-items */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 15px 0;
 }
 
@@ -40,16 +44,16 @@ html {
 }
 
 .cardGroup {
-    /* display */
-  
+    display: flex;  
     border: 1px solid #CAD0D2;
     border-radius: 4px;
     overflow: hidden;
   }
   
     .cardGroup__card {
-      /* flex-grow, flex-shrink, flex-basis */
-  
+      flex-grow: 1;
+      flex-basis: auto;
+      flex-shrink: 1;
       border: none;
       border-radius: 0;
     }
@@ -59,5 +63,36 @@ html {
     }
   
     .cardGroup__cardDescription {
-      /* flex-grow, flex-shrink, flex-basis */
+      flex-grow: 1;
+      flex-basis: auto;
+      flex-shrink: 1;
     }
+
+
+  
+@media (min-width:321px) and (max-width:710px) {
+
+     .cardGroup {
+     display: flex; 
+    
+  }
+    .cardGroup__card {
+    flex-basis: 200px;
+    align-content: center;
+}
+
+}
+
+    @media (max-width: 320px) {
+   
+    .cardGroup {
+      display: flex; 
+      
+  }
+  .cardGroup__card {
+  
+    flex-basis: 200px;
+    align-content: center;
+}
+
+}
